--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Fabio Mangone</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
-						</div>
-					</section>
+				<section id="banner">
+					<div class="inner">
+						<div class="logo"><img src="images/Steinway_Logo.svg" alt="Steinway_Logo.svg" /></div>
+						<h2>Fabio Mangone</h2>
+						<p>La mia passione: La musica</p>
+					</div>
+				</section>
 
 				<!-- Wrapper -->
 					<section id="wrapper">
