--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 				<section id="banner">
 					<div class="inner">
-						<div class="logo"><img src="c:\Users\FABIO\Documents\Mabbi0.github.io\images\Steinway_Logo.svg.png" alt="Steinway_Logo.svg" /></div>
+						<div class="logo"><img src="c:\Users\FABIO\Documents\Mabbi0.github.io\images\desktop-wallpaper-5-steinway-steinway.jpg" alt="desktop-wallpaper-5-steinway-steinway.jpg" /></div>
 						<h2>Fabio Mangone</h2>
 						<p>La mia passione: La musica</p>
 					</div>
