--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<!-- Banner -->
 				<section id="banner">
 					<div class="inner">
-						<div class="logo"><img src="c:/Users/FABIO/Documents/Mabbi0.github.io/images/steinway_logo.jpg" alt="steinway_logo.jpg" /></div>
+						<div class="logo"><img src="images/steinway_logo.jpg" alt="Nuovo Logo" /></div>
 						<h2>Fabio Mangone</h2>
 						<p>La mia passione: La musica</p>
 					</div>
