--- a/index.html
+++ b/index.html
@@ -1,183 +1,60 @@
-<!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Solid State by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
-
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
-
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Solid State</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
-
-				<!-- Banner -->
-				<section id="banner">
-					<div class="inner">
-						<div class="logo"><img src="images/steinway_logo.jpg" alt="Nuovo Logo" /></div>
-						<h2>Fabio Mangone</h2>
-						<p>La mia passione: La musica</p>
-					</div>
-				</section>
-
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+<p dir="ltr" style="text-align:right">
+    SENECA 
+    <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=id.yex68fuqeuhn"><span style="color:rgb(103,78,167)">BACK &#8657;</span></a>
+</p>
+<br>
+<p dir="ltr" style="text-align:right"><span style="color:rgb(106,168,79)">BACK &#8657;</span></p>
+<ul>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.5hjcjd8rxa0r"><span style="color:rgb(0,0,0)">VITA</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.jec2ljspw4ww"><span style="color:rgb(0,0,0)">FILOSOFIA</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.85fz62sr1acf"><span style="color:rgb(0,0,0)">DIALOGI</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.mi2xc7qyf96l"><span style="color:rgb(0,0,0)">CONSOLATIONES</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.3kv8wd2149dj"><span style="color:rgb(0,0,0)">EPISTOLARIO</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.3fs0xnilqqlw"><span style="color:rgb(0,0,0)">APOKOLOKYNTOSIS</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.7c8roex3905c"><span style="color:rgb(0,0,0)">SCHIAVIT&#218;</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.2dxshrnsp4vs"><span style="color:rgb(0,0,0)">TRAGEDIA</span></a>
+        </p>
+    </li>
+    <li dir="ltr">
+        <p dir="ltr" style="text-align:right">
+            <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=id.7izm1sidegxz"><span style="color:rgb(0,0,0)">SENECA PAOLO</span></a>
+        </p>
+    </li>
+</ul>
+<hr>
+<br>
+<p dir="ltr" style="text-align:right">
+    VITA 
+    <a href="https://docs.google.com/document/d/1vN6Owu4PhxW-EkHQuwQea6TF4_x6usX_TWUlaS-77kQ/edit#bookmark=kix.wt61mt9rg063"><span style="color:rgb(106,168,79)">BACK &#8657; </span></a>
+</p>
+<p dir="ltr">Lucio Anneo Seneca nasce a Cordova, Spagna, il 4 a.C. da una famiglia italica di ordine equestre. Da giovane si trasfer&#236; a Roma dove studi&#242; retorica e filosofia. Dopo un viaggio ad Alessandria, Egitto, nel 31 d.C. diventa questore avviandosi all&#8217;attivit&#224; politica. Ben presto diventa un famoso oratore, al punto da richiamare l&#8217;attenzione di Caligola, contrario alle idee di libert&#224; civili promosse dal filosofo; rischia la morte nel 39 d.C. ma si salva grazie all&#8217;intervento di una amante del princeps, che inganna l&#8217;imperatore affermando che Seneca fosse malato e che quindi avesse poco ancora da vivere. Nel 41 d.C. il nuovo princeps Claudio lo invia in esilio in Corsica per 8 anni a causa di un adulterio con Giulia Livilla, sorella di Caligola, che viene uccisa per ordine di Messalina, la moglie di Claudio gelosa di Giulia. Messalina viene sostituita da Agrippina quando tradisce Claudio organizzando un matrimonio pubblico con Gaio Silvio; i due vengono uccisi. Proprio Agrippina permise a Seneca nel 49 d.C. di tornare a Roma. Al saggio viene affidata l&#8217;educazione del figlio Nerone, che succede a Claudio nel 54 d.C. e nel frattempo Seneca, diventato pretore, si trova ad amministrare l&#8217;intero impero romano con al suo fianco il prefetto del pretorio Afranio Burro. Grazie ai consigli impartiti da Seneca e da Agrippina, Nerone governa in modo equilibrato, si parla del &#8220;buon governo&#8221; di Nerone. Le ambizioni del giovane per&#242; si accrescono e quindi decide di far uccidere la madre e la moglie Ottavia, per sposare Poppea e inizia ad accentrare il potere nelle proprie mani. Seneca acconsente alle richieste del princeps, timoroso per la propria incolumit&#224;, per&#242; quando Nerone ordina la morte di Afranio, sostituito dal corrotto Tigellino, il filosofo chiede all&#8217;imperatore di ritirarsi a vita privata. <span style="color:rgb(56,118,29)">Seneca lascia la vita politica e si dedica agli studi, non dimenticandosi della societ&#224;, e continuando a scrivere opere, operando il </span><span style="color:rgb(56,118,29)">negotium</span>. Nel 65 d.C. il nome di Seneca rientra nella cerchia organizzatrice della congiura dei Pisoni, anche se storicamente non &#232; accertata la sua partecipazione; un centurione gli ordina di uccidersi e cos&#236; Seneca si ammazza tagliandosi le vene e la sua morte &#232; l&#8217;esempio perfetto di &#8220;morte stoica&#8221;, secondo cui il saggio &#232; libero da tutto, persino la morte. Inoltre, la morte di Seneca, ma in generale di chi si suicida per ordine imperiale, rappresenta un privilegio, poich&#233; non permetteva che i propri beni finissero nelle casse dello Stato.</p>
